--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -48,7 +48,7 @@
     "bet-error-min": "เดิมพัน {{button}} ขั้นต่ำ {{value, number}}",
     "insuffix-balance": "ยอดเงินคงเหลือไม่เพียงพอ",
     "autobet-error-insufficient-balance": "เดิมพันอัตโนมัติล้มเหลว ยอดเงินคงเหลือไม่เพียงพอ",
-    "doublebet-error-max-bet": "ข้อผิดพลาดในการเดิมพันสองเท่า การเดิมพันสูงสุด",
+    "doublebet-error-max-bet": "ถึงขีดจำกัดการเดิมพันสูงสุดแล้ว",
     "bet-void-n50": "คุณต้องวางเดิมพันกับผู้เล่นหรือเจ้ามือหรือเสมอก่อนเพื่อที่จะเดิมพันที่ {{button}}",
     "winner": "ผู้ชนะ",
     "payout-no-initial-bet": "การจ่ายเงินไม่รวมเงินเดิมพันเริ่มต้น",
