--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -58,5 +58,6 @@
     "shuffling-cards": "สับไพ่",
     "complete-how-to-play": "คู่มือการเล่นแบบสมบูรณ์",
     "dont-show-again": "อย่าแสดงอีก",
-    "streaming-error": "เกิดข้อผิดพลาดในการสตรีม: url การสตรีมไม่ถูกต้อง"
+    "streaming-error": "เกิดข้อผิดพลาดในการสตรีม: url การสตรีมไม่ถูกต้อง",
+    "no-promotion": "ไม่มีกิจกรรมในขณะนี้"
 }
