--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -58,5 +58,6 @@
     "shuffling-cards": "xào bài",
     "complete-how-to-play": "Hướng dẫn chơi",
     "dont-show-again": "Tắt hiển thị",
-    "streaming-error": "lỗi phát trực tuyến: url phát trực tuyến không hợp lệ"
+    "streaming-error": "lỗi phát trực tuyến: url phát trực tuyến không hợp lệ",
+    "no-promotion": "hiện tại không có sự kiện nào"
 }
