add language tr and hi

--- a/src/locales/id/common.json
+++ b/src/locales/id/common.json
@@ -10,14 +10,14 @@
     "video": "video",
     "live-streaming-sound": "suara siaran langsung",
     "game-effects": "efek permainan",
-    "auto-rebet": "taruhan otomatis",
+    "auto-rebet": "taruhan ulang otomatis",
     "language": "bahasa",
     "main-bet": "taruhan utama",
     "limit-bet": "batas taruhan",
     "payout": "pembayaran",
     "side-bet": "taruhan sampingan",
     "note": "catatan",
-    "note-payout-and-limit": "Taruhan sampingan tidak dapat melebihi setengah jumlah taruhan utama",
+    "note-payout-and-limit": "Taruhan sampingan tidak boleh melebihi setengah dari jumlah taruhan utama",
     "high": "tinggi",
     "medium": "sedang",
     "auto": "otomatis",
@@ -34,7 +34,7 @@
     "hide": "sembunyikan",
     "show": "tampilkan",
     "favorite": "favorit",
-    "cancel": "batalkan",
+    "cancel": "batal",
     "rebet": "taruhan ulang",
     "double": "gandakan",
     "mode": "mode",
@@ -43,11 +43,11 @@
     "you-win": "kamu menang",
     "bet-confirmed": "taruhan dikonfirmasi",
     "bet-error": "kesalahan taruhan",
-    "bet-error-n50": "Pasang {{button}}, Tidak bisa pasang {{other}}",
+    "bet-error-n50": "Sudah memasang taruhan {{button}}, tidak bisa memasang {{other}}",
     "bet-error-max": "Taruhan {{button}} maksimal {{value, number}}",
     "bet-error-min": "Taruhan {{button}} minimal {{value, number}}",
     "insuffix-balance": "saldo tidak cukup",
-    "autobet-error-insufficient-balance": "autobet gagal, saldo tidak mencukupi",
+    "autobet-error-insufficient-balance": "taruhan otomatis gagal, saldo tidak cukup",
     "doublebet-error-max-bet": "Batas taruhan maksimal tercapai",
     "bet-void-n50": "Pasang taruhan utama terlebih dahulu",
     "winner": "pemenang",
@@ -56,8 +56,8 @@
     "game": "permainan",
     "features": "fitur",
     "shuffling-cards": "mengocok kartu",
-    "complete-how-to-play": "Cara bermain lengkap",
+    "complete-how-to-play": "Panduan lengkap cara bermain",
     "dont-show-again": "Jangan tampilkan lagi",
-    "streaming-error": "terjadi kesalahan pada streaming: url streaming tidak valid",
+    "streaming-error": "kesalahan streaming: url streaming tidak valid",
     "no-promotion": "tidak ada promosi saat ini"
 }
