--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -8,56 +8,56 @@
     "promotion": "khuyến mãi",
     "settings": "cài đặt",
     "video": "video",
-    "live-streaming-sound": "âm thanh trực tuyến",
+    "live-streaming-sound": "âm thanh phát trực tiếp",
     "game-effects": "hiệu ứng trò chơi",
     "auto-rebet": "tự động đặt cược lại",
     "language": "ngôn ngữ",
     "main-bet": "cược chính",
     "limit-bet": "giới hạn cược",
     "payout": "thanh toán",
-    "side-bet": "cược bên",
+    "side-bet": "cược phụ",
     "note": "ghi chú",
-    "note-payout-and-limit": "Cược bên không được vượt quá một nửa số tiền cược chính",
+    "note-payout-and-limit": "Cược phụ không thể vượt quá một nửa số tiền cược chính",
     "high": "cao",
     "medium": "trung bình",
     "auto": "tự động",
     "today": "hôm nay",
-    "previous": "trước",
-    "bet": "đặt cược",
+    "previous": "trước đó",
+    "bet": "cược",
     "win": "thắng",
     "period": "kỳ",
-    "total": "tổng cộng",
+    "total": "tổng",
     "statistic": "thống kê",
     "no-transactions": "không có giao dịch",
     "no-result": "không có kết quả",
     "no-results-yet": "chưa có kết quả",
     "hide": "ẩn",
     "show": "hiển thị",
-    "favorite": "yêu thích",
+    "favorite": "ưa thích",
     "cancel": "hủy",
     "rebet": "đặt cược lại",
     "double": "gấp đôi",
     "mode": "chế độ",
-    "stop": "dừng lại",
+    "stop": "dừng",
     "total-bet": "tổng cược",
     "you-win": "bạn thắng",
-    "bet-confirmed": "đặt cược đã xác nhận",
-    "bet-error": "lỗi đặt cược",
-    "bet-error-n50": "Đã đặt cược {{button}}, bạn không thể đặt cược {{other}}",
+    "bet-confirmed": "cược đã được xác nhận",
+    "bet-error": "lỗi cược",
+    "bet-error-n50": "Đã đặt cược {{button}}, không thể đặt cược {{other}}",
     "bet-error-max": "Cược {{button}} tối đa {{value, number}}",
     "bet-error-min": "Cược {{button}} tối thiểu {{value, number}}",
     "insuffix-balance": "số dư không đủ",
-    "autobet-error-insufficient-balance": "tự động cược thất bại, số dư không đủ",
+    "autobet-error-insufficient-balance": "đặt cược tự động thất bại, số dư không đủ",
     "doublebet-error-max-bet": "Đã đạt giới hạn cược tối đa",
-    "bet-void-n50": "Bạn phải đặt cược vào Người chơi hoặc Nhà cái hoặc Hòa trước để đặt cược vào {{button}}",
+    "bet-void-n50": "Đặt cược chính trước",
     "winner": "người thắng",
-    "payout-no-initial-bet": "Tiền thưởng không bao gồm tiền cược ban đầu.",
-    "payout-includes-initial-bet": "Tiền thưởng bao gồm tiền cược ban đầu.",
+    "payout-no-initial-bet": "Thanh toán không bao gồm cược ban đầu.",
+    "payout-includes-initial-bet": "Thanh toán bao gồm cược ban đầu.",
     "game": "trò chơi",
     "features": "tính năng",
-    "shuffling-cards": "xào bài",
-    "complete-how-to-play": "Hướng dẫn chơi",
-    "dont-show-again": "Tắt hiển thị",
-    "streaming-error": "lỗi phát trực tuyến: url phát trực tuyến không hợp lệ",
-    "no-promotion": "hiện tại không có sự kiện nào"
+    "shuffling-cards": "xáo bài",
+    "complete-how-to-play": "Hướng dẫn chơi đầy đủ",
+    "dont-show-again": "Không hiển thị lại",
+    "streaming-error": "lỗi phát trực tuyến: url phát không hợp lệ",
+    "no-promotion": "không có sự kiện lúc này"
 }
