--- a/src/locales/ko/mini-htp.json
+++ b/src/locales/ko/mini-htp.json
@@ -2,17 +2,20 @@
     "slide-1": {
         "title": "게임 방법",
         "content": [
-            "작은 공을 숫자 0부터 36까지 있는 37개의 슬롯이 있는 회전하는 바퀴에 던지는 게임입니다."
+            "최대 <b>500x Jackpot & Lucky Number!</b>까지 환상적인 보너스 지급을 받으세요!",
+            "회전하는 우리에 나타날 공을 추측하여 플레이하세요. 빨간색과 검은색으로 된 1부터 24까지의 숫자가 있는 24개의 공이 있습니다."
         ]
     },
     "slide-2": {
-        "title": "베팅",
+        "title": "Lucky Numbers",
         "content": [
-            "숫자, 숫자 범위, 색깔, 또는 홀수/짝수에 베팅할 수 있습니다. 베팅을 한 후에는 바퀴가 회전하고 공이 던져집니다."
+            "시스템은 무작위로 2에서 12개의 숫자를 Lucky Numbers로 선택합니다. Lucky Numbers는 일반 지급금보다 급격히 증가한 지급금을 가지며, 베팅 금액의 <b>30배에서 95배</b>까지입니다."
         ]
     },
     "slide-3": {
-        "title": "게임 결과",
-        "content": ["공이 슬롯 중 하나에 멈추면, 결과와 일치하는 베팅이 승리하게 됩니다."]
+        "title": "Jackpot Number",
+        "content": [
+            "시스템은 무작위로 <b>1개의 숫자</b>를 Jackpot Number로 선택합니다. 이 숫자는 Lucky Number 보너스를 넘어서는 상당한 지급금 증가를 제공하며, 베팅 금액의 <b>100배에서 500배</b>까지입니다."
+        ]
     }
 }
