--- a/src/locales/th/mini-htp.json
+++ b/src/locales/th/mini-htp.json
@@ -1,16 +1,21 @@
 {
     "slide-1": {
-        "title": "วิธีการเล่น",
-        "content": ["เกมที่ลูกบอลเล็ก ๆ ถูกโยนเข้าไปในวงล้อหมุนที่มี 37 ช่องตัวเลขตั้งแต่ 0 ถึง 36"]
+        "title": "วิธีเล่น",
+        "content": [
+            "ชนะโบนัสการจ่ายเงินที่ยอดเยี่ยมสูงสุดถึง <b>500x Jackpot & Lucky Number!</b>",
+            "เล่นโดยการทายลูกบอลที่จะปรากฏในกรงหมุน มีลูกบอล 24 ลูกที่มีตัวเลขตั้งแต่ 1 ถึง 24 ในสีแดงและดำ"
+        ]
     },
     "slide-2": {
-        "title": "การเดิมพัน",
+        "title": "Lucky Numbers",
         "content": [
-            "คุณสามารถเดิมพันตัวเลข ช่วงตัวเลข สี หรือว่าจะออกคี่หรือคู่ หลังจากคุณวางเดิมพัน วงล้อจะหมุนและลูกบอลจะถูกโยน"
+            "ระบบจะสุ่มเลือกตัวเลข 2 ถึง 12 ตัวเป็น Lucky Numbers. Lucky Numbers มีการเพิ่มการจ่ายเงินอย่างมากเหนือกว่าการจ่ายเงินปกติ เริ่มต้นที่ <b>30x ถึง 95x</b> ของจำนวนเงินเดิมพันของคุณ"
         ]
     },
     "slide-3": {
-        "title": "ผลลัพธ์ของเกม",
-        "content": ["ลูกบอลจะหยุดที่หนึ่งในช่อง และการเดิมพันที่ตรงกับผลลัพธ์นั้นจะชนะ"]
+        "title": "Jackpot Number",
+        "content": [
+            "ระบบจะสุ่มเลือก <b>1 ตัวเลข</b> เป็น Jackpot Number. ตัวเลขนี้สามารถเพิ่มการจ่ายเงินอย่างมากเกินกว่าโบนัส Lucky Number เริ่มต้นที่ <b>100x ถึง 500x</b> ของการเดิมพันของคุณ"
+        ]
     }
 }
