--- a/src/locales/en/mini-htp.json
+++ b/src/locales/en/mini-htp.json
@@ -2,19 +2,20 @@
     "slide-1": {
         "title": "How to Play",
         "content": [
-            "This is a game where a small ball is thrown into a spinning wheel that has 37 slots numbered from 0 to 36."
+            "Win fantastic payout bonuses up to <b>500x Jackpot & Lucky Number!</b>",
+            "Play by guessing the ball that will appear in the spinning cage. There are 24 balls numbered from 1 to 24 in red and black."
         ]
     },
     "slide-2": {
-        "title": "Betting",
+        "title": "Lucky Numbers",
         "content": [
-            "You can bet on numbers, number ranges, colors, or whether the outcome is odd or even. Once your bet is placed, the wheel is spun and a ball is thrown in."
+            "The system randomly selects 2 to 12 numbers as Lucky Numbers. Lucky Numbers have a drastic increase in payout above the normal payout, ranging from <b>30x to 95x</b> your bet amount."
         ]
     },
     "slide-3": {
-        "title": "Game Outcome",
+        "title": "Jackpot Number",
         "content": [
-            "The ball will stop in one of the slots, and any bets that match the result will win."
+            "The system randomly selects <b>1 number</b> as the Jackpot Number. This number can significantly increase the payout beyond the Lucky Number Bonus, starting from <b>100x to 500x</b> your bet."
         ]
     }
 }
