--- a/src/locales/vn/mini-htp.json
+++ b/src/locales/vn/mini-htp.json
@@ -2,19 +2,20 @@
     "slide-1": {
         "title": "Cách Chơi",
         "content": [
-            "Trò chơi này ném một quả bóng nhỏ vào bánh xe quay có 37 khe được đánh số từ 0 đến 36."
+            "Giành được tiền thưởng thanh toán tuyệt vời lên đến <b>500x Jackpot & Lucky Number!</b>",
+            "Chơi bằng cách đoán quả bóng sẽ xuất hiện trong lồng quay. Có 24 quả bóng được đánh số từ 1 đến 24 với màu đỏ và đen."
         ]
     },
     "slide-2": {
-        "title": "Đặt Cược",
+        "title": "Lucky Numbers",
         "content": [
-            "Bạn có thể đặt cược vào con số, khoảng số, màu sắc hoặc số chẵn/lẻ. Sau khi bạn đặt cược, bánh xe sẽ quay và một quả bóng sẽ được ném vào."
+            "Hệ thống chọn ngẫu nhiên từ 2 đến 12 số làm Lucky Numbers. Lucky Numbers có mức tăng thanh toán đáng kể so với thanh toán thông thường, từ <b>30x đến 95x</b> số tiền cược của bạn."
         ]
     },
     "slide-3": {
-        "title": "Kết Quả Trò Chơi",
+        "title": "Jackpot Number",
         "content": [
-            "Quả bóng sẽ dừng lại ở một trong các khe và các cược phù hợp với kết quả sẽ thắng."
+            "Hệ thống chọn ngẫu nhiên <b>1 số</b> làm Jackpot Number. Số này có thể làm tăng đáng kể thanh toán vượt qua Lucky Number Bonus, bắt đầu từ <b>100x đến 500x</b> số tiền cược của bạn."
         ]
     }
 }
