--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -43,6 +43,7 @@
     "you-win": "승리하셨습니다",
     "bet-confirmed": "베팅 확인됨",
     "bet-error": "베팅 오류",
+    "bet-closed": "베팅 종료",
     "bet-error-n50": "이미 {{button}} 베팅을 했으므로 {{other}} 베팅을 할 수 없습니다",
     "bet-error-max": "{{button}} 베팅 최대 {{value, number}}",
     "bet-error-min": "{{button}} 베팅 최소 {{value, number}}",
