--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -43,6 +43,7 @@
     "you-win": "您赢了",
     "bet-confirmed": "下注已确认",
     "bet-error": "下注错误",
+    "bet-closed": "投注已关闭",
     "bet-error-n50": "已下 {{button}} 注，不能下 {{other}} 注",
     "bet-error-max": "{{button}} 注最大 {{value, number}}",
     "bet-error-min": "{{button}} 注最小 {{value, number}}",
