--- a/src/locales/en/features.json
+++ b/src/locales/en/features.json
@@ -3,25 +3,25 @@
         "general": {
             "title": "General",
             "content": {
-                "paragraph-1": "You must have sufficient funds to cover your bets to participate in a game. Your current balance can be seen at the bottom left of your screen.",
-                "paragraph-2": "The TOTAL BET indicator displays the total bet amount you have placed for the current round.",
-                "paragraph-3": "Displays the minimum and maximum bets allowed on the table and can change anytime. It also shows the current period's unique code and the name of the game you are playing.",
-                "paragraph-4": "The timer will tell you how much time it takes to place a bet. Once it has expired, betting is closed, and no more bets can be accepted. Once the betting time has expired, you will receive a \"bet accepted\" confirmation if your bet was accepted to participate in the game round; otherwise, you will receive a \"Not all bets accepted\" or \"Bet declined\" notification.",
-                "paragraph-5": "The chip display allows you to select the value of each chip you wish to bet. You can choose the chip value for a bet by clicking on the chip at the bottom of the screen near the Undol, Double, and Rebet buttons to see all available chip values. Only chip values ​​that can be used with your current balance can be selected."
+                "paragraph-1": "To participate in the game, you must have sufficient balance/funds to cover your bets. Your current balance can be seen at the bottom left of your screen.",
+                "paragraph-2": "The TOTAL BET indicator displays the total amount of bets you have placed for the current round.",
+                "paragraph-3": "Displays the minimum and maximum bets allowed on the table, which may change at any time. Additionally, the unique code for the current period and the name of the game you are playing are shown.",
+                "paragraph-4": "The timer indicates the remaining time to place bets. Once the timer ends, betting closes, and no further bets are accepted. After betting concludes, you will receive a \"bet accepted\" confirmation if your bet is valid for the game round; otherwise, you will see \"Not all bets accepted\" or \"Bet rejected\".",
+                "paragraph-5": "The chip display allows you to select the value of chips you wish to bet. Choose chip values by clicking the chips at the bottom of the screen, located near the Undo, Double, and Rebet buttons. Only chip values compatible with your current balance are selectable."
             },
             "game-name": "Game Name"
         },
         "menu": {
             "title": "Menu",
-            "description": "Additional buttons to make it easier for players to play the game.",
+            "description": "Additional buttons to assist players during the game.",
             "content": {
-                "paragraph-1": "The Undo button will remove one chip you previously placed on the table.",
-                "paragraph-2": "Doubles the number of chips you have placed. Make sure your account balance is sufficient to double all bets placed.",
-                "paragraph-3": "Allows you to repeat the bet you placed on the previous round at the table.",
-                "paragraph-4": "The Burger menu provides essential menus for the game.",
-                "paragraph-5": "Disguise the display of chips that you have placed on the table.",
-                "paragraph-6": "To display the Statistics of the game in progress.",
-                "paragraph-7": "Show or hide the Roadmap / Game Statistics."
+                "paragraph-1": "The Undo button removes the last chip placed on the table.",
+                "paragraph-2": "Doubles the total value of chips you have placed. Ensure your account balance is sufficient to cover the doubled bets.",
+                "paragraph-3": "Allows you to repeat the same bet as your previous round on the table.",
+                "paragraph-4": "The Burger Menu provides access to key in-game features and settings.",
+                "paragraph-5": "Hides the chips you have placed on the table.",
+                "paragraph-6": "Displays real-time game statistics for the ongoing session.",
+                "paragraph-7": "Toggles the visibility of the Roadmap/Game Statistics."
             }
         }
     }
