--- a/src/locales/th/features.json
+++ b/src/locales/th/features.json
@@ -3,25 +3,25 @@
         "general": {
             "title": "ทั่วไป",
             "content": {
-                "paragraph-1": "คุณต้องมีเงินเพียงพอที่จะครอบคลุมการเดิมพันของคุณเพื่อเข้าร่วมในเกม ยอดเงินปัจจุบันของคุณสามารถดูได้ที่ด้านล่างซ้ายของหน้าจอของคุณ",
-                "paragraph-2": "ตัวบ่งชี้ยอดเดิมพันทั้งหมดจะแสดงจำนวนเงินเดิมพันทั้งหมดที่คุณวางสำหรับรอบปัจจุบัน",
-                "paragraph-3": "แสดงจำนวนเงินเดิมพันขั้นต่ำและสูงสุดที่อนุญาตบนโต๊ะและสามารถเปลี่ยนแปลงได้ตลอดเวลา นอกจากนี้ยังแสดงรหัสเฉพาะของรอบปัจจุบันและชื่อเกมที่คุณกำลังเล่น",
-                "paragraph-4": "ตัวจับเวลาจะแสดงเวลาที่เหลือสำหรับการวางเดิมพัน เมื่อเวลาหมด การเดิมพันจะปิด และจะไม่รับเดิมพันอีกต่อไป เมื่อเวลาหมด คุณจะได้รับการยืนยัน 'รับเดิมพันแล้ว' หากการเดิมพันของคุณได้รับการยอมรับให้เข้าร่วมในรอบเกม มิฉะนั้นคุณจะได้รับการแจ้งเตือนว่า 'ไม่รับเดิมพันทั้งหมด' หรือ 'เดิมพันถูกปฏิเสธ'",
-                "paragraph-5": "หน้าจอชิปช่วยให้คุณเลือกมูลค่าของชิปแต่ละรายการที่คุณต้องการเดิมพันได้ คุณสามารถเลือกมูลค่าชิปสำหรับเดิมพันโดยคลิกที่ชิปที่ด้านล่างของหน้าจอใกล้ปุ่มยกเลิก, สองเท่า และเดิมพันใหม่ เพื่อดูมูลค่าชิปทั้งหมดที่มีให้เลือก สามารถเลือกมูลค่าชิปที่ใช้ได้กับยอดเงินปัจจุบันของคุณเท่านั้น"
+                "paragraph-1": "เพื่อเข้าร่วมเกม คุณต้องมีเงินคงเหลือ/เงินทุนเพียงพอสำหรับเดิมพัน ยอดเงินปัจจุบันของคุณสามารถดูได้ที่มุมซ้ายล่างของหน้าจอ",
+                "paragraph-2": "ตัวบ่งชี้ TOTAL BET แสดงจำนวนเงินเดิมพันทั้งหมดที่คุณวางสำหรับรอบปัจจุบัน",
+                "paragraph-3": "แสดงข้อจำกัดเดิมพันขั้นต่ำและสูงสุดที่อนุญาตบนโต๊ะ ซึ่งอาจเปลี่ยนแปลงได้ตลอดเวลา นอกจากนี้ยังแสดงรหัสเฉพาะของช่วงเวลาปัจจุบันและชื่อเกมที่คุณกำลังเล่น",
+                "paragraph-4": "ตัวจับเวลาจะแสดงเวลาที่เหลือสำหรับวางเดิมพัน เมื่อเวลาสิ้นสุด การเดิมพันจะปิดและไม่มีการรับเดิมพันเพิ่มเติม หลังจากหมดเวลาเดิมพัน คุณจะได้รับการยืนยัน \"เดิมพันสำเร็จ\" หากเดิมพันของคุณถูกต้อง หรือ \"เดิมพันบางส่วนไม่ถูกต้อง\" / \"เดิมพันถูกปฏิเสธ\" หากไม่ผ่าน",
+                "paragraph-5": "ส่วนแสดงชิปช่วยให้คุณเลือกมูลค่าชิปที่ต้องการเดิมพัน คุณสามารถเลือกมูลค่าชิปโดยคลิกที่ชิปด้านล่างหน้าจอ ใกล้กับปุ่ม ยกเลิก, ทบยอด, และ วางซ้ำ (Rebet) ระบบจะแสดงเฉพาะมูลค่าชิปที่ใช้ได้กับยอดเงินปัจจุบันของคุณ"
             },
             "game-name": "ชื่อเกม"
         },
         "menu": {
             "title": "เมนู",
-            "description": "ปุ่มเพิ่มเติมเพื่อให้ง่ายต่อการเล่นเกมสำหรับผู้เล่น",
+            "description": "ปุ่มเพิ่มเติมเพื่อช่วยผู้เล่นในระหว่างเกม",
             "content": {
-                "paragraph-1": "ปุ่มย้อนกลับจะลบชิปที่คุณวางบนโต๊ะก่อนหน้านี้",
-                "paragraph-2": "เพิ่มจำนวนชิปที่คุณวางไว้เป็นสองเท่า ตรวจสอบให้แน่ใจว่ายอดเงินในบัญชีของคุณเพียงพอที่จะเพิ่มเงินเดิมพันทั้งหมดเป็นสองเท่า",
-                "paragraph-3": "อนุญาตให้คุณวางเดิมพันซ้ำที่คุณวางไว้ในรอบก่อนหน้าที่โต๊ะ",
-                "paragraph-4": "เมนูเบอร์เกอร์มีเมนูสำคัญสำหรับเกม",
-                "paragraph-5": "ซ่อนการแสดงชิปที่คุณวางบนโต๊ะ",
-                "paragraph-6": "เพื่อแสดงสถิติของเกมที่กำลังดำเนินอยู่",
-                "paragraph-7": "แสดงหรือซ่อนแผนงาน / สถิติของเกม"
+                "paragraph-1": "ปุ่ม ยกเลิก จะลบชิปที่วางล่าสุดบนโต๊ะ",
+                "paragraph-2": "ทบยอดเงินเดิมพันเป็นสองเท่า ตรวจสอบให้แน่ใจว่ายอดเงินบัญชีเพียงพอสำหรับการทบยอดทั้งหมด",
+                "paragraph-3": "อนุญาตให้คุณวางเดิมพันซ้ำเหมือนรอบก่อนหน้าบนโต๊ะ",
+                "paragraph-4": "เมนูแฮมเบอร์เกอร์ให้เข้าถึงฟีเจอร์และตั้งค่าสำคัญในเกม",
+                "paragraph-5": "ซ่อนชิปที่คุณวางบนโต๊ะ",
+                "paragraph-6": "แสดงสถิติเกมแบบเรียลไทม์สำหรับเซสชันปัจจุบัน",
+                "paragraph-7": "สลับการแสดง Roadmap/สถิติเกม"
             }
         }
     }
