--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -42,6 +42,7 @@
     "total-bet": "เดิมพันทั้งหมด",
     "you-win": "คุณชนะ",
     "bet-confirmed": "ยืนยันการเดิมพัน",
+    "bet-accepted": "เดิมพันสำเร็จ",
     "bet-error": "ข้อผิดพลาดในการเดิมพัน",
     "bet-closed": "เดิมพันปิด",
     "bet-error-n50": "ได้วางเดิมพัน {{button}} แล้ว ไม่สามารถวางเดิมพัน {{other}}",
