--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -42,6 +42,7 @@
     "total-bet": "total bet",
     "you-win": "you win",
     "bet-confirmed": "bet confirmed",
+    "bet-accepted": "bet accepted",
     "bet-error": "bet error",
     "bet-closed": "bet closed",
     "bet-error-n50": "Already placed {{button}} bet, can't bet {{other}}",
