add how to play

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,6 +1,7 @@
 {
     "menu": "menu",
     "pattern": "pattern",
+    "roadmap": "roadmap",
     "lobby": "lobby",
     "history": "history",
     "how-to-play": "how to play",
