update for settings

--- a/src/locales/hi/common.json
+++ b/src/locales/hi/common.json
@@ -1,6 +1,6 @@
 {
     "menu": "मेनू",
-    "pattern": "पैटर्न",
+    "roadmap": "रोडमैप",
     "lobby": "लॉबी",
     "history": "इतिहास",
     "how-to-play": "कैसे खेलें",
