--- a/src/locales/id/common.json
+++ b/src/locales/id/common.json
@@ -1,6 +1,6 @@
 {
     "menu": "menu",
-    "pattern": "pola",
+    "roadmap": "pola",
     "lobby": "lobi",
     "history": "riwayat",
     "how-to-play": "cara bermain",
