--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -1,6 +1,6 @@
 {
     "menu": "메뉴",
-    "pattern": "패턴",
+    "roadmap": "패턴",
     "lobby": "로비",
     "history": "기록",
     "how-to-play": "게임 방법",
