--- a/src/locales/pt-BR/common.json
+++ b/src/locales/pt-BR/common.json
@@ -1,6 +1,6 @@
 {
     "menu": "menu",
-    "pattern": "padrão",
+    "roadmap": "padrão",
     "lobby": "lobby",
     "history": "histórico",
     "how-to-play": "como jogar",
