--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -1,6 +1,6 @@
 {
     "menu": "เมนู",
-    "pattern": "รูปแบบ",
+    "roadmap": "รูปแบบ",
     "lobby": "ล็อบบี้",
     "history": "ประวัติ",
     "how-to-play": "วิธีเล่น",
