--- a/src/locales/tr/common.json
+++ b/src/locales/tr/common.json
@@ -1,6 +1,6 @@
 {
     "menu": "menü",
-    "pattern": "desen",
+    "roadmap": "desen",
     "lobby": "lobi",
     "history": "geçmiş",
     "how-to-play": "nasıl oynanır",
