--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -1,6 +1,6 @@
 {
     "menu": "menu",
-    "pattern": "mẫu",
+    "roadmap": "mô hình",
     "lobby": "sảnh",
     "history": "lịch sử",
     "how-to-play": "cách chơi",
