--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -1,6 +1,6 @@
 {
     "menu": "菜单",
-    "pattern": "模式",
+    "roadmap": "路单",
     "lobby": "大厅",
     "history": "历史",
     "how-to-play": "玩法",
