update game music

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -9,6 +9,7 @@
     "settings": "settings",
     "video": "video",
     "live-streaming-sound": "live streaming sound",
+    "background-music": "background music",
     "game-effects": "game effects",
     "auto-rebet": "auto rebet",
     "language": "language",
