--- a/src/locales/hi/common.json
+++ b/src/locales/hi/common.json
@@ -9,6 +9,7 @@
     "settings": "सेटिंग्स",
     "video": "वीडियो",
     "live-streaming-sound": "लाइव स्ट्रीमिंग ध्वनि",
+    "background-music": "पृष्ठभूमि संगीत",
     "game-effects": "खेल प्रभाव",
     "auto-rebet": "स्वत: पुन: दांव",
     "language": "भाषा",
