--- a/src/locales/id/common.json
+++ b/src/locales/id/common.json
@@ -9,6 +9,7 @@
     "settings": "pengaturan",
     "video": "video",
     "live-streaming-sound": "suara siaran langsung",
+    "background-music": "musik latar",
     "game-effects": "efek permainan",
     "auto-rebet": "taruhan ulang otomatis",
     "language": "bahasa",
