--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -9,6 +9,7 @@
     "settings": "설정",
     "video": "비디오",
     "live-streaming-sound": "라이브 스트리밍 소리",
+    "background-music": "배경 음악",
     "game-effects": "게임 효과",
     "auto-rebet": "자동 재베팅",
     "language": "언어",
