--- a/src/locales/pt-BR/common.json
+++ b/src/locales/pt-BR/common.json
@@ -9,6 +9,7 @@
     "settings": "configurações",
     "video": "vídeo",
     "live-streaming-sound": "som da transmissão ao vivo",
+    "background-music": "música de fundo",
     "game-effects": "efeitos do jogo",
     "auto-rebet": "reapostar automaticamente",
     "language": "idioma",
