--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -9,6 +9,7 @@
     "settings": "การตั้งค่า",
     "video": "วิดีโอ",
     "live-streaming-sound": "เสียงการถ่ายทอดสด",
+    "background-music": "เพลงพื้นหลัง",
     "game-effects": "เอฟเฟกต์เกม",
     "auto-rebet": "การวางเดิมพันอัตโนมัติ",
     "language": "ภาษา",
