--- a/src/locales/tr/common.json
+++ b/src/locales/tr/common.json
@@ -9,6 +9,7 @@
     "settings": "ayarlar",
     "video": "video",
     "live-streaming-sound": "canlı yayın sesi",
+    "background-music": "arka plan müziği",
     "game-effects": "oyun efektleri",
     "auto-rebet": "otomatik yeniden bahis",
     "language": "dil",
