--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -9,6 +9,7 @@
     "settings": "cài đặt",
     "video": "video",
     "live-streaming-sound": "âm thanh phát trực tiếp",
+    "background-music": "nhạc nền",
     "game-effects": "hiệu ứng trò chơi",
     "auto-rebet": "tự động đặt cược lại",
     "language": "ngôn ngữ",
