--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -9,6 +9,7 @@
     "settings": "设置",
     "video": "视频",
     "live-streaming-sound": "直播声音",
+    "background-music": "背景音乐",
     "game-effects": "游戏效果",
     "auto-rebet": "自动重下注",
     "language": "语言",
